# imu_augment_sim

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
examples/: al_rules_ds.py  al_rules_hs.py  al_rules_rd.py  al_rules_rgs.py  basic_workflow.py  example_al_rules.py  example_config.yml  example_config_ds.yml  example_config_hs.yml  example_config_rd.yml  example_config_rgs.yml  util.py
opensim_templates/: analyzer_settings.xml  imu_ik_settings.xml
opensim_templates/model_with_constraints/: Unrestricted_Full_Body_Model.osim  restricted_full_body_model.osim
src/imu_augment_sim/: __init__.py  analysis.py  augmentation.py  constants.py  dataset.py  ik.py  labeling.py  preprocessing.py
